--- a/index.html
+++ b/index.html
@@ -142,16 +142,16 @@
                                 <div class="lists-block-left">
                                     <div class="left-list">
                                         <ul class="activities-list">
-                                            <li>Подбор персонала</li>
-                                            <li>Аутсорсинг</li>
-                                            <li>Аутплейсмент</li>
+                                            <li class="activities-list-item">Подбор персонала</li>
+                                            <li class="activities-list-item">Аутсорсинг</li>
+                                            <li class="activities-list-item">Аутплейсмент</li>
                                         </ul>
                                     </div>
                                     <div class="right-list">
                                         <ul class="activities-list">
-                                            <li>Подбор персонала</li>
-                                            <li>Аутсорсинг</li>
-                                            <li>Аутплейсмент</li>
+                                            <li class="activities-list-item">Подбор персонала</li>
+                                            <li class="activities-list-item">Аутсорсинг</li>
+                                            <li class="activities-list-item">Аутплейсмент</li>
                                         </ul>
                                     </div>
                                 </div>
@@ -165,9 +165,9 @@
                             </div>
                             <div class="lists-block-right">
                                 <ul class="activities-list">
-                                    <li>Подбор персонала</li>
-                                    <li>Аутсорсинг</li>
-                                    <li>Аутплейсмент</li>
+                                    <li class="activities-list-item">Подбор персонала</li>
+                                    <li class="activities-list-item">Аутсорсинг</li>
+                                    <li class="activities-list-item">Аутплейсмент</li>
                                 </ul>
                             </div>
                         </div>
@@ -179,45 +179,43 @@
                     <h1 class="h1-title">Процесс поиска специалиста</h1>
 
                     <div class="find-spec-wrap">
-                        <div class="top-find-spec">
-                            <div class="find-spec-step">
-                                <div class="number-bg">01</div>
-                                <h1 class="step-h1">Собираем первичные данные</h1>
-                                <span class="step-desc">Обсуждаем профиль, необходимые компетенции и тд.</span>
-                            </div>
-                            <div class="find-spec-step">
-                                <div class="number-bg">02</div>
-                                <h1 class="step-h1">Поиск подходящих специалистов</h1>
-                                <span class="step-desc">По заданным вами критериям мы проведем поиск и первые этапы
-                                    отбора.</span>
-                            </div>
-                            <div class="find-spec-step">
-                                <div class="number-bg">03</div>
-                                <h1 class="step-h1">Оценка и отбор кандидатов</h1>
-                                <span class="step-desc">Проводим интервью по компетенциям, анализируем личность
-                                    кандидатов по системе Thomas International</span>
-                            </div>
+                        <div class="find-spec-step">
+                            <div class="number-bg">01</div>
+                            <h1 class="step-h1">Собираем первичные данные</h1>
+                            <span class="step-desc">Обсуждаем профиль, необходимые компетенции и тд.</span>
                         </div>
-                        <div class="bottom-find-spec">
-                            <div class="find-spec-step">
-                                <div class="number-bg">04</div>
-                                <h1 class="step-h1">Выход сотрудника на работу</h1>
-                                <span class="step-desc">Еще один текст с комментариями по данному действию: помогает ли
-                                    агентство в адаптации и тд.</span>
-                            </div>
-                            <div class="find-spec-step">
-                                <div class="number-bg">05</div>
-                                <h1 class="step-h1">Оплата работы агентства</h1>
-                                <span class="step-desc">После успешного устройства кандидата на работу вы производите
-                                    оплату</span>
-                            </div>
-                            <div class="find-spec-step purple-step">
-                                <h1 class="step-h1-white">7-14 дней</h1>
-                                <span class="step-desc-white">требуется, чтобы найти подходящего кандидата</span>
-                            </div>
+                        <div class="find-spec-step">
+                            <div class="number-bg">02</div>
+                            <h1 class="step-h1">Поиск подходящих специалистов</h1>
+                            <span class="step-desc">По заданным вами критериям мы проведем поиск и первые этапы
+                                отбора.</span>
                         </div>
+                        <div class="find-spec-step">
+                            <div class="number-bg">03</div>
+                            <h1 class="step-h1">Оценка и отбор кандидатов</h1>
+                            <span class="step-desc">Проводим интервью по компетенциям, анализируем личность
+                                кандидатов по системе Thomas International</span>
+                        </div>
+
+                        <div class="find-spec-step">
+                            <div class="number-bg">04</div>
+                            <h1 class="step-h1">Выход сотрудника на работу</h1>
+                            <span class="step-desc">Еще один текст с комментариями по данному действию: помогает ли
+                                агентство в адаптации и тд.</span>
+                        </div>
+                        <div class="find-spec-step">
+                            <div class="number-bg">05</div>
+                            <h1 class="step-h1">Оплата работы агентства</h1>
+                            <span class="step-desc">После успешного устройства кандидата на работу вы производите
+                                оплату</span>
+                        </div>
+                        <div class="find-spec-step purple-step">
+                            <h1 class="step-h1-white">7-14 дней</h1>
+                            <span class="step-desc-white">требуется, чтобы найти подходящего кандидата</span>
+                        </div>
+
+
                     </div>
-                </div>
             </section>
             <section class="spec-find-form">
                 <div class="container-small">
@@ -236,7 +234,7 @@
                                     value="Номер телефона">
                                 <input class="white-btn" type="submit" value="Найти специалиста">
                             </form>
-                            <div class="bottm-desc-small">
+                            <div class="bottom-desc-small">
                                 <span>Отправляя форму вы соглашаетесь на обработку персональных данных. </span>
                             </div>
                         </div>
