--- a/index.html
+++ b/index.html
@@ -40,7 +40,18 @@
                                 <div class="menu-col">
                                     <nav class="menu-body">
                                         <ul class="menu-list">
-                                            <li><a class="menu-link">О компании</a></li>
+                                            <div class="dropdown"><button class="dropbtn">О компании
+                                                    <i class="fa fa-caret-down"></i>
+                                                </button>
+                                                <div class="dropdown-content">
+                                                    <a href="#">Наша команда</a>
+                                                    <a href="#">Отзывы</a>
+                                                    <a href="#">Цены</a>
+                                                    <a href="#">Наши партнеры</a>
+                                                    <a href="#">Работа у нас</a>
+                                                    <a href="#">Благотворительная деятельность</a>
+                                                </div>
+                                            </div>
                                             <li><a class="menu-link">Работодателям</a></li>
                                             <li><a class="menu-link">Соискателям</a></li>
                                             <li><a class="menu-link">Подбор по отраслям</a></li>
@@ -309,8 +320,101 @@
                         </div>
                     </div>
                 </div>
-
     </div>
+    </section>
+    <section class="new-vacancies">
+        <div class="container-small">
+            <p class="new-vacancies-title h1-title">Новые вакансии</p>
+            <div class="new-vacancies-wrap">
+                <div class="vacancy-block">
+                    <p class="vacancy-title">Медицинский представитель</p>
+                    <div class="vacancy-block-btm-wrap">
+                        <div class="city-salary">
+                            <span class="vacancy-location icon-location"> Москва</span>
+                            <span class="vacancy-salary icon-wallet"> 200 000</span>
+                        </div>
+                        <div class="block-arrow icon-arrow-right"></div>
+                    </div>
+
+                </div>
+                <div class="vacancy-block">
+                    <p class="vacancy-title">Медицинский представитель</p>
+                    <div class="vacancy-block-btm-wrap">
+                        <div class="city-salary">
+                            <span class="vacancy-location icon-location"> Москва</span>
+                            <span class="vacancy-salary icon-wallet"> 200 000</span>
+                        </div>
+                        <div class="block-arrow icon-arrow-right"></div>
+                    </div>
+
+                </div>
+                <div class="vacancy-block">
+                    <p class="vacancy-title">Медицинский представитель</p>
+                    <div class="vacancy-block-btm-wrap">
+                        <div class="city-salary">
+                            <span class="vacancy-location icon-location"> Москва</span>
+                            <span class="vacancy-salary icon-wallet"> 200 000</span>
+                        </div>
+                        <div class="block-arrow icon-arrow-right"></div>
+                    </div>
+
+                </div>
+                <div class="vacancy-block">
+                    <p class="vacancy-title">Медицинский представитель</p>
+                    <div class="vacancy-block-btm-wrap">
+                        <div class="city-salary">
+                            <span class="vacancy-location icon-location"> Москва</span>
+                            <span class="vacancy-salary icon-wallet"> 200 000</span>
+                        </div>
+                        <div class="block-arrow icon-arrow-right"></div>
+                    </div>
+
+                </div>
+
+
+
+            </div>
+            <div class="all-vacancies-btn-wrap">
+                <a href="#" class="all-vacancies-btn violet-btn">Найти специалиста</a>
+
+            </div>
+
+        </div>
+
+    </section>
+    <section class="achievements">
+        <div class="container-small">
+            <div class="achivements-wrap">
+                <div class="achivements-title-block">
+                    <p class="achivements-title">
+                        Достижения
+                    </p>
+                </div>
+                <div class="achivements-steps-wrap">
+                    <div class="achivements-step">
+                        <p class="achiv-step-title">23</p>
+                        <p class="achiv-step-desc">спциализированные команды по подбору персонала</p>
+                    </div>
+                    <div class="achivements-step">
+                        <p class="achiv-step-title">300</p>
+                        <p class="achiv-step-desc">компаний обращаются к нам ежегодно</p>
+                    </div>
+                    <div class="achivements-step">
+                        <p class="achiv-step-title">91%</p>
+                        <p class="achiv-step-desc">клиентов готов нас рекомендовать</p>
+                    </div>
+                    <div class="achivements-step">
+                        <p class="achiv-step-title">10 000</p>
+                        <p class="achiv-step-desc">кандидатов в 60 городах России и СНГ успешно устроились</p>
+                    </div>
+                    <div class="achivements-step">
+                        <p class="achiv-step-title">98%</p>
+                        <p class="achiv-step-desc">кандидатов проходят испытательный срок</p>
+                    </div>
+
+                </div>
+            </div>
+        </div>
     </section>
     </main>
     <footer class="footer">
