partners block added

--- a/index.html
+++ b/index.html
@@ -416,6 +416,39 @@
             </div>
         </div>
     </section>
+    <section class="partners">
+        <div class="container-small">
+            <p class="partners-title-h1 h1-title">Наши партнеры</p>
+
+            <div class="partners-wrap">
+                <div class="partner-block">
+                    <div class="partner-logo-title">
+                        <img src="./images/par1.jpg" alt="" class="partner-logo">
+                        <p class="partner-title">EF Education First</p>
+                    </div>
+                    <div class="partner-desc-block">
+                        <p class="partner-desc-text">
+                            Компания предлагает языковые программы для всех возрастов от лагерей для школьников, курсов
+                            и поездок для взрослых по всему миру до долгосрочных курсов за рубежом.
+                        </p>
+                    </div>
+                </div>
+                <div class="partner-block">
+                    <div class="partner-logo-title">
+                        <img src="./images/par1.jpg" alt="" class="partner-logo">
+                        <p class="partner-title">EF Education First</p>
+                    </div>
+                    <div class="partner-desc-block">
+                        <p class="partner-desc-text">
+                            Компания предлагает языковые программы для всех возрастов от лагерей для школьников, курсов
+                            и поездок для взрослых по всему миру до долгосрочных курсов за рубежом.
+                        </p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
     </main>
     <footer class="footer">
         Footer
