partners and reviews blocks

--- a/index.html
+++ b/index.html
@@ -422,54 +422,102 @@
         <div class="container-small">
             <p class="partners-title-h1 h1-title">Наши партнеры</p>
 
-            <div class="slider" data-slider="itc-slider" data-loop="false">
-                <div class="partners-wrap-slider">
-                    <div class="partner-blocks">
-                        <div class="partner-block">
-                            <div class="partner-logo-title">
-                                <img src="./images/par1.jpg" alt="" class="partner-logo">
-                                <p class="partner-title">EF Education First</p>
-                            </div>
-                            <div class="partner-desc-block">
-                                <p class="partner-desc-text">
-                                    Компания предлагает языковые программы для всех возрастов от лагерей для школьников,
-                                    курсов
-                                    и поездок для взрослых по всему миру до долгосрочных курсов за рубежом.
-                                </p>
-                            </div>
-                        </div>
-                        <div class="partner-block">
-                            <div class="partner-logo-title">
-                                <img src="./images/par1.jpg" alt="" class="partner-logo">
-                                <p class="partner-title">EF Education First</p>
-                            </div>
-                            <div class="partner-desc-block">
-                                <p class="partner-desc-text">
-                                    Компания предлагает языковые программы для всех возрастов от лагерей для школьников,
-                                    курсов
-                                    и поездок для взрослых по всему миру до долгосрочных курсов за рубежом.
-                                </p>
-                            </div>
-                        </div>
-                        <div class="partner-block">
-                            <div class="partner-logo-title">
-                                <img src="./images/par1.jpg" alt="" class="partner-logo">
-                                <p class="partner-title">EF Education First</p>
-                            </div>
-                            <div class="partner-desc-block">
-                                <p class="partner-desc-text">
-                                    Компания предлагает языковые программы для всех возрастов от лагерей для школьников,
-                                    курсов
-                                    и поездок для взрослых по всему миру до долгосрочных курсов за рубежом.
-                                </p>
-                            </div>
+            <div class="partner-blocks">
+                <div class="partner-block">
+                    <div class="partner-logo-title">
+                        <img src="./images/par1.jpg" alt="" class="partner-logo">
+                        <p class="partner-title">EF Education First</p>
+                    </div>
+                    <div class="partner-desc-block">
+                        <p class="partner-desc-text">
+                            Компания предлагает языковые программы для всех возрастов от лагерей для школьников,
+                            курсов
+                            и поездок для взрослых по всему миру до долгосрочных курсов за рубежом.
+                        </p>
+                    </div>
+                </div>
+                <div class="partner-block">
+                    <div class="partner-logo-title">
+                        <img src="./images/par1.jpg" alt="" class="partner-logo">
+                        <p class="partner-title">EF Education First</p>
+                    </div>
+                    <div class="partner-desc-block">
+                        <p class="partner-desc-text">
+                            Компания предлагает языковые программы для всех возрастов от лагерей для школьников,
+                            курсов
+                            и поездок для взрослых по всему миру до долгосрочных курсов за рубежом.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="partners-btn-wrap">
+                <a href="#" class="all-vacancies-btn violet-btn">Все партнеры</a>
+
+            </div>
+        </div>
+    </section>
+    <section class="customer-reviews">
+        <div class="container-small">
+            <p class="reviews-title-h1 h1-title">Отзывы наших клиентов</p>
+
+            <div class="reviews-blocks">
+                <div class="reviews-block">
+                    <div class="reviews-logo-title">
+                        <img src="https://i.pravatar.cc/50" alt="" class="customer-foto">
+                        <div class="customer-desc-block">
+                            <p class="customer-name">Юлия Ильяева</p>
+                            </p>
+                            <p class="customer-desc">Директор по развитию Team for Dream</p>
                         </div>
                     </div>
-
-
+                    <div class="customer-desc-block">
+                        <p class="customer-desc-text">
+                            От лица компании Knauf благодарим Antal за качественную и оперативную работу по подготовке
+                            специализированного обзора зарплат. Нам было важно получить ответ в очень сжатые сроки, и
+                            консультанты Antal полностью справились с этой задачей.
+                        </p>
+                    </div>
                 </div>
-                <button class="slider__control" data-slide="prev"></button>
-                <button class="slider__control" data-slide="next"></button>
+                <div class="reviews-block">
+                    <div class="reviews-logo-title">
+                        <img src="https://i.pravatar.cc/50" alt="" class="customer-foto">
+                        <div class="customer-desc-block">
+                            <p class="customer-name">Олег</p>
+                            </p>
+                            <p class="customer-desc">Генеральный директор финансовой организации</p>
+                        </div>
+                    </div>
+                    <div class="customer-desc-block">
+                        <p class="customer-desc-text">
+                            От лица компании Knauf благодарим Antal за качественную и оперативную работу по подготовке
+                            специализированного обзора зарплат. Нам было важно получить ответ в очень сжатые сроки, и
+                            консультанты Antal полностью справились с этой задачей.
+                        </p>
+                    </div>
+                </div>
+                <div class="reviews-block">
+                    <div class="reviews-logo-title">
+                        <img src="https://i.pravatar.cc/50" alt="" class="customer-foto">
+                        <div class="customer-desc-block">
+                            <p class="customer-name">Ольга Новодворская</p>
+                            </p>
+                            <p class="customer-desc">Директор по развитию Team for Dream</p>
+                        </div>
+                    </div>
+                    <div class="customer-desc-block">
+                        <p class="customer-desc-text">
+                            От лица компании Knauf благодарим Antal за качественную и оперативную работу по подготовке
+                            специализированного обзора зарплат. Нам было важно получить ответ в очень сжатые сроки, и
+                            консультанты Antal полностью справились с этой задачей.
+                        </p>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="partners-btn-wrap">
+                <a href="#" class="all-vacancies-btn violet-btn">Читать все отзывы</a>
+
             </div>
         </div>
     </section>
