--- a/index.html
+++ b/index.html
@@ -372,9 +372,6 @@
                     </div>
 
                 </div>
-
-
-
             </div>
             <div class="all-vacancies-btn-wrap">
                 <a href="#" class="all-vacancies-btn violet-btn">Найти специалиста</a>
@@ -521,9 +518,121 @@
             </div>
         </div>
     </section>
+    <section class="articles">
+        <div class="container-small">
+            <p class="articles-title h1-title">Статьи</p>
+            <div class="articles-wrap">
+                <div class="article-block">
+                    <div class="article-top-block">
+                        <p class="article-title">Марафон «Гид по карьере»: с 23 по 27 мая 2022</p>
+                        <span class="article-date">22.04.2022</span>
+                    </div>
+                    <div class="article-block-btm-wrap">
+                        <div class="article-desc-wrap">
+                            <span class="article-desc">Рады сообщить, что мы запускаем новый набор
+                                участников на наш марафон Гид по карьере. Зная, как востребованы сейчас
+                                карьерные...</span>
+                        </div>
+                        <div class="block-arrow icon-arrow-right"></div>
+                    </div>
+
+                </div>
+                <div class="article-block">
+                    <div class="article-top-block">
+                        <p class="article-title">Марафон «Гид по карьере»: с 23 по 27 мая 2022</p>
+                        <span class="article-date">22.04.2022</span>
+                    </div>
+                    <div class="article-block-btm-wrap">
+                        <div class="article-desc-wrap">
+                            <span class="article-desc">Рады сообщить, что мы запускаем новый набор
+                                участников на наш марафон Гид по карьере. Зная, как востребованы сейчас
+                                карьерные...</span>
+                        </div>
+                        <div class="block-arrow icon-arrow-right"></div>
+                    </div>
+
+                </div>
+
+            </div>
+            <div class="all-article-btn-wrap">
+                <a href="#" class="all-article-btn violet-btn">Найти специалиста</a>
+
+            </div>
+        </div>
+    </section>
     </main>
     <footer class="footer">
-        Footer
+        <div class="footer-wrap">
+            <div class="footer-top-wrap">
+                <div class="footer-menu-wrap">
+                    <div class="footer-about-company">
+                        <span class="footer-title">О компании</span>
+                        <ul class="footer-menu-list">
+                            <li>Наша команда</li>
+                            <li>Отзывы</li>
+                            <li>Цены</li>
+                            <li>Наши партнеры</li>
+                            <li>Работа у нас</li>
+                            <li>Благотворительная деятальность</li>
+                        </ul>
+
+                    </div>
+                    <div class="footer-employers">
+                        <span class="footer-title">Работодателям</span>
+                        <ul class="footer-menu-list">
+                            <li>Подбор персонала</li>
+                            <li>Аутсорсинг персонала</li>
+                            <li>Аутстаффинг персонала</li>
+                            <li>Аутсорсинг процесса рекрутмента</li>
+                            <li>Аутплейсмент</li>
+                            <li>Тренинги для персонала</li>
+                            <li>Исследования</li>
+                        </ul>
+
+                    </div>
+                    <div class="footer-applicants">
+                        <span class="footer-title">Соискателям</span>
+                        <ul class="footer-menu-list">
+                            <li>Поиск работы</li>
+                            <li>Карьерное консультирование</li>
+                            <li>Тесты для кандидатов</li>
+                        </ul>
+
+                    </div>
+
+
+                </div>
+                <div class="footer-socials-btn">
+                    <a href="#" class="footer-btn white-btn">Оставить заявку</a>
+                    <div class="socials-col">
+                        <a href="" class="footer-social-item icon-telegram"></a>
+                        <a href="" class="footer-social-item  icon-vk"></a>
+                        <a href="" class="footer-social-item icon-twitter"></a>
+                        <a href="" class="footer-social-item icon-youtube"></a>
+                        <a href="" class="footer-social-item icon-linkedin"></a>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-bottom-wrap">
+                <div class="footer-btm-left">
+                    <span class="terms-of-use footer-polices-texts">
+                        Пользовательское соглашение
+                    </span>
+                    <span class="labor-protection footer-polices-texts">
+                        Политика в области охраны труда
+                    </span>
+                    <span class="personal-data footer-polices-texts">
+                        Политика в отношении обработки персональных данных
+                    </span>
+                </div>
+                <div class="footer-btm-right">
+                    <span class="personal-data footer-polices-texts">
+                        © Antal Russia 2022. All Rights Reserved.
+                    </span>
+                </div>
+
+            </div>
+        </div>
     </footer>
     </div>
     </div>
