remade header block

--- a/index.html
+++ b/index.html
@@ -21,63 +21,59 @@
         <header class="header">
             <div class="container">
                 <div class="header-row">
-                    <div class="left-col-head">
-                        <div class="logo-col">
-                            <a href=""><img src="./images/main-logo.png" alt="" class="logo-img" width="80"
-                                    height="80"></a>
-                        </div>
-                        <div class="wrap-menu-address">
-                            <div class="adress-socials">
-                                <div class="adress-col">
-                                    <ul class="adress-list">
-                                        <li class="adress-item"><span class="adress-city">Москва</span><a
-                                                class="adress-tel">+7
-                                                495 935-86-06</a></li>
-                                        <li class="adress-item"><span class="adress-city">Санкт-Петербург</span><a
-                                                class="adress-tel">+7 812 332-53-91</a></li>
-                                    </ul>
+                    <div class="logo-col">
+                        <a href=""><img src="./images/main-logo.png" alt="" class="logo-img" width="80" height="80"></a>
+                    </div>
+                    <div class="header-right-col">
+                        <div class="header-top-col">
+                            <div class="adress-col">
+                                <ul class="adress-list">
+                                    <li class="adress-item"><span class="adress-city">Москва</span><a
+                                            class="adress-tel">+7
+                                            495 935-86-06</a></li>
+                                    <li class="adress-item"><span class="adress-city">Санкт-Петербург</span><a
+                                            class="adress-tel">+7 812 332-53-91</a></li>
+                                </ul>
+                            </div>
+                            <div class="social-and-btn-wrap">
+                                <div class="socials-col">
+                                    <a href="" class="social-item icon-telegram"></a>
+                                    <a href="" class="social-item icon-vk"></a>
+                                    <a href="" class="social-item icon-twitter"></a>
+                                    <a href="" class="social-item icon-youtube"></a>
+                                    <a href="" class="social-item icon-linkedin"></a>
                                 </div>
+                                <div class="request-button button-transperent">
+                                    <a href="">Отправить заявку</a>
 
-                                <div class="menu-col">
-                                    <nav class="menu-body">
-                                        <ul class="menu-list">
-                                            <div class="dropdown"><button class="dropbtn">
-                                                    О компании
-                                                    <i class="icon-menu-arr"></i>
-                                                </button>
-                                                <div class="dropdown-content">
-                                                    <a href="#">Наша команда</a>
-                                                    <a href="#">Отзывы</a>
-                                                    <a href="#">Цены</a>
-                                                    <a href="#">Наши партнеры</a>
-                                                    <a href="#">Работа у нас</a>
-                                                    <a href="#">Благотворительная деятельность</a>
-                                                </div>
-                                            </div>
-                                            <li><a class="menu-link">Работодателям</a></li>
-                                            <li><a class="menu-link">Соискателям</a></li>
-                                            <li><a class="menu-link">Подбор по отраслям</a></li>
-                                            <li><a class="menu-link">Блог</a></li>
-                                            <li><a class="menu-link">Контакты</a></li>
-                                        </ul>
-                                    </nav>
                                 </div>
                             </div>
-                        </div>
-                    </div>
 
-                    <div class="right-col">
-                        <div class="socials-col">
-                            <a href="" class="social-item icon-telegram"></a>
-                            <a href="" class="social-item icon-vk"></a>
-                            <a href="" class="social-item icon-twitter"></a>
-                            <a href="" class="social-item icon-youtube"></a>
-                            <a href="" class="social-item icon-linkedin"></a>
                         </div>
-                        <div class="last-col">
-                            <div class="request-button button-transperent">
-                                <a href="">Отправить заявку</a>
-
+                        <div class="header-bottom-col">
+                            <div class="menu-col">
+                                <nav class="menu-body">
+                                    <ul class="menu-list">
+                                        <div class="dropdown"><button class="dropbtn">
+                                                О компании
+                                                <i class="icon-menu-arr"></i>
+                                            </button>
+                                            <div class="dropdown-content">
+                                                <a href="#">Наша команда</a>
+                                                <a href="#">Отзывы</a>
+                                                <a href="#">Цены</a>
+                                                <a href="#">Наши партнеры</a>
+                                                <a href="#">Работа у нас</a>
+                                                <a href="#">Благотворительная деятельность</a>
+                                            </div>
+                                        </div>
+                                        <li><a class="menu-link">Работодателям</a></li>
+                                        <li><a class="menu-link">Соискателям</a></li>
+                                        <li><a class="menu-link">Подбор по отраслям</a></li>
+                                        <li><a class="menu-link">Блог</a></li>
+                                        <li><a class="menu-link">Контакты</a></li>
+                                    </ul>
+                                </nav>
                             </div>
                             <div class="lang-links">
                                 <a href="" class="antal-links">Antal world</a>
@@ -85,6 +81,7 @@
                             </div>
                         </div>
                     </div>
+
                     <button type="button" class="mobile-nav-button">
                         <span class="mobile-nav-button__icon"></span>
                     </button>
